k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corazon
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: corazoncreativeco.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: corazon
                port:
                  number: 3000
    - host: www.corazoncreativeco.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: corazon
                port:
                  number: 3000
